--- a/journal/202101.md
+++ b/journal/202101.md
@@ -37,6 +37,7 @@ The main effort of the month was to prepare, thoroughly review and test several 
 
 Other changes:
 
+- finalized [DCP-0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) document describing Decentralized Treasury specs
 - added 3 new HTTPS [seeders](https://github.com/decred/dcrd/pull/2532) to reduce dependency on decred.org domain
 - the deprecated version 1 cfilters were [removed](https://github.com/decred/dcrd/pull/2525) in favor of the more efficient v2 ("compact filters" power Decred's awesome [SPV](https://docs.decred.org/wallets/spv/) tech for light clients)
 - support TLS client [authentication](https://github.com/decred/dcrd/pull/2482) using client certificates (more flexible than user+password)
@@ -158,19 +159,14 @@ To enable the above features, mixing and Politeia support were added to the [dcr
 
 **[decred.org](https://github.com/decred/dcrweb)**
 
-- {}
-
-{ check if anything interesting happened in the other repos under
-
-- https://github.com/decred
-- https://github.com/planetdecred
-- https://github.com/raedahgroup
-
-}
+- a [new page](https://github.com/decred/dcrweb/pull/941) dedicated to v1.6 [release](https://decred.org/release/) with subtle interactivity
+- content updates
 
 Other:
 
-- { smaller items go here }
+- [dcrseeder](https://github.com/decred/dcrseeder) received fixes for [peer](https://github.com/decred/dcrseeder/pull/43) tracking and graceful [shutdown](https://github.com/decred/dcrseeder/pull/41)
+- [release](https://github.com/decred/release) tool was updated to v1.6 and multiple developers have reproduced release builds with it
+- Bug Bounty program has processed a total of 150 submissions and 14 were eligible for a payout, as of [Jan 16](https://bounty.decred.org/2021/01/status-update/)
 
 ## People
 
