--- a/journal/202101.md
+++ b/journal/202101.md
@@ -7,7 +7,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 { introduction, major news of the month ordered by impact, don't put any links here }
 
 - v1.6 release
-- a batch of outreach and research proposals are up for discussions
+- a batch of outreach and research proposals are up for discussion
 
 ## v1.6 Release
 
@@ -24,24 +24,24 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 Unless otherwise noted, the work reported here has the "merged to master" status. It means that the work is completed, reviewed, and integrated into the source code that advanced users can build and run, but is not yet available in release binaries for regular users.
 
-January's upgrades of dcrd { others? } are a good example what users building [from source](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c) can consume _today_ without waiting months for the next release!
+January's updates to dcrd are a good example what users building [from source](https://medium.com/@artikozel/the-decred-node-back-to-the-source-part-one-27d4576e7e1c) can get today without waiting for the next release.
 
 **[dcrd](https://github.com/decred/dcrd)**
 
 The main effort of the month was to prepare, thoroughly review and test several epic changes towards [multi-peer](https://github.com/decred/dcrd/issues/1145) block downloading, although the changes are generally useful for simplifying the code and unlocking future optimizations:
 
-- completely [reworked](https://github.com/decred/dcrd/pull/2518) block indexing and processing to use headers-first semantics and support out of order processing
-- reworked UTXO handling to work on a per-[outpoint](https://github.com/decred/dcrd/pull/2540) basis instead of at a transaction level
+- completely [reworked](https://github.com/decred/dcrd/pull/2518) block indexing and processing to use headers-first semantics and support out of order processing of block data
+- reworked UTXO handling to work on a [per-outpoint](https://github.com/decred/dcrd/pull/2540) basis instead of at a transaction level
 - [sync model](https://github.com/decred/dcrd/pull/2555) reworked to use header announcements. The small 180-byte [headers](https://devdocs.decred.org/developer-guides/block-header-specifications/) will be downloaded before any block data, and then only needed blocks will be downloaded. This optimizes traffic, removes the concept of "orphan blocks", and opens the door for future enhancements.
 - preparations for implementing UTXO cache
 
 Other changes:
 
-- finalized [DCP-0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) document describing Decentralized Treasury specs
+- finalized [DCP-0006](https://github.com/decred/dcps/blob/master/dcp-0006/dcp-0006.mediawiki) document describing technical details of the upcoming Decentralized Treasury consensus change
 - added 3 new HTTPS [seeders](https://github.com/decred/dcrd/pull/2532) to reduce dependency on decred.org domain
 - the deprecated version 1 cfilters were [removed](https://github.com/decred/dcrd/pull/2525) in favor of the more efficient v2 ("compact filters" power Decred's awesome [SPV](https://docs.decred.org/wallets/spv/) tech for light clients)
-- support TLS client [authentication](https://github.com/decred/dcrd/pull/2482) using client certificates (more flexible than user+password)
-- support for [RSA](https://github.com/decred/dcrd/pull/2551) 4096 bit keys in gencerts tool
+- added TLS client [authentication](https://github.com/decred/dcrd/pull/2482) using client certificates (more flexible than user+password)
+- added [RSA](https://github.com/decred/dcrd/pull/2551) 4096 bit key support to gencerts tool
 - new commands to [invalidate](https://github.com/decred/dcrd/pull/2536) arbitrary blocks and reconsider arbitrary blocks for validation (allows easier testing and smoother upgrades in the future)
 - prevent [duplicate](https://github.com/decred/dcrd/pull/2563) pending connections to same IP address and port
 - miscellaneous updates to test code, logging, docs, dependencies, minor fixes, etc
@@ -54,16 +54,16 @@ In progress:
 
 **[dcrwallet](https://github.com/decred/dcrwallet)**
 
-- VSP client was [rewritten](https://github.com/decred/dcrwallet/pull/1956) to improve background processing and support recovery of fee payment information after seed restores { better translation to User-English welcome, I didn't quite grasp the first design goal of 1956 }
+- VSP client was [rewritten](https://github.com/decred/dcrwallet/pull/1956) to improve background processing and support recovery of fee payment information after seed restores { better translation to User-English is welcome, I didn't quite grasp the first design goal of 1956 }
 - narrow [rules](https://github.com/decred/dcrwallet/pull/1961) of what is considered a possible CoinJoin { I got what this change does but now where it is used }
 
 The above changes were also backported to v1.6 release.
 
 **[Decrediton](https://github.com/decred/decrediton)**
 
-- added list of [unspent](https://github.com/decred/decrediton/pull/3098) outputs (UTXOs)
-- update [ticket status](https://github.com/decred/decrediton/pull/3121) on starts, restarts and seed restores
+- new page showing a list of [unspent](https://github.com/decred/decrediton/pull/3098) outputs (UTXOs)
 - show VSPs in [random](https://github.com/decred/decrediton/pull/3114) order
+- update [ticket status](https://github.com/decred/decrediton/pull/3121) on starts, restarts and seed restores
 - remove usage of [CSRF](https://github.com/decred/decrediton/pull/3133) tokens when communicating to Politeia, to prevent privacy leaks
 - [auto-detect](https://github.com/decred/decrediton/pull/3033) if the wallet used mixing in the past
 - UI hints for [RFP](https://github.com/decred/decrediton/pull/3118) proposals and submissions
@@ -72,11 +72,9 @@ The above changes were also backported to v1.6 release.
 - more automated [UI tests](https://github.com/decred/decrediton/pull/2659)
 - ~24 bug fixes and 3 UI tweaks
 
-Most of the above changes were included in v1.6 release.
+Most of the above changes were included in v1.6 release and the rest will land in v1.6.1 patch release.
 
 **[Politeia](https://github.com/decred/politeia)**
-
-Politeia:
 
 - show basic [proposal rules](https://github.com/decred/politeiagui/pull/2290) before the Submit button
 - remove calls to [dcrdata](https://github.com/decred/politeia/pull/1360) from politeiavoter command-line tool
@@ -97,7 +95,7 @@ CMS:
 
 **[dcrpool](https://github.com/decred/dcrpool)**
 
-- various improvements for config handling, errors, HTTP redirects
+- various improvements for config handling, errors, and HTTP redirects
 
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
@@ -105,14 +103,14 @@ CMS:
 
 **[dcrdex](https://github.com/decred/dcrdex)**
 
-Three key topics for January were to fix remaining issues for the [v0.1.4](https://github.com/decred/dcrdex/releases/tag/v0.1.4) patch (which was part of the collective v1.6 release), continue development towards the next v0.2 milestone, and manage the proposal for the next development phase.
+Three key topics in January were to fix remaining issues for the [v0.1.4](https://github.com/decred/dcrdex/releases/tag/v0.1.4) patch (which was part of the collective v1.6 release), continue development towards the next v0.2 milestone, and manage the proposal for the next development phase.
 
 Merged work:
 
-- allow the user to [export and import](https://github.com/decred/dcrdex/pull/885) account data (primarily private keys)
+- allow the user to [export and import](https://github.com/decred/dcrdex/pull/885) account data (mainly private keys)
 - support [switching](https://github.com/decred/dcrdex/pull/901) from unencrypted to an encrypted BTC wallet
-- client-side fee rate [limit](https://github.com/decred/dcrdex/pull/874)
-- created sample [config](https://github.com/decred/dcrdex/pull/927) files
+- client-side fee rate [limits](https://github.com/decred/dcrdex/pull/874)
+- sample [config](https://github.com/decred/dcrdex/pull/927) files
 - validate max [fee rate](https://github.com/decred/dcrdex/pull/898) at match time to partially prevent the server from maliciously assigning too high fee
 - fixed several issues with address validation, wallet locking, login, etc, and backported them to v0.1.4 release
 
@@ -122,25 +120,25 @@ Check the [second](https://proposals.decred.org/proposals/d462ac3) proposal for 
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
-- CoinShuffle++ [mixing](https://github.com/planetdecred/dcrandroid/pull/520) support. When enabled, generating receiving addresses for the mixed account and sending funds from the change account are disabled.
-- privacy [UI pages](https://github.com/planetdecred/dcrandroid/pull/529): introduction, help popup, display of unmixed balance, CSPP server details, mixing progress, etc
-- Politeia [proposals](https://github.com/planetdecred/dcrandroid/pull/503) support. Allows to list proposals, see their vote status, view a specific proposal and receive notifications on new proposals, vote start and finish.
+- initial CoinShuffle++ [mixing](https://github.com/planetdecred/dcrandroid/pull/520) support: when enabled, generating receiving addresses for the mixed account and sending funds from the change account are disabled
+- Privacy [UI pages](https://github.com/planetdecred/dcrandroid/pull/529): introduction, help popup, display of unmixed balance, CSPP server details, mixing progress, etc
+- Politeia [proposals](https://github.com/planetdecred/dcrandroid/pull/503) support: see a list of proposals and their vote status, open a specific proposal and receive notifications on new proposals, vote start and finish
 - debug page to view details about connected [peers](https://github.com/planetdecred/dcrandroid/pull/501)
 - option to create a [watch-only](https://github.com/planetdecred/dcrandroid/pull/530) wallet from the splash screen
 - more specific notifications for [ticket](https://github.com/planetdecred/dcrandroid/pull/531) vote and revocation transactions
 
-To enable the above features, mixing and Politeia support were added to the [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) base library and can be reused by dcrios and godcr.
+To enable the above features, mixing and Politeia support were added to the [dcrlibwallet](https://github.com/planetdecred/dcrlibwallet) base library and can now be reused by dcrios and godcr.
 
 **[dcrios](https://github.com/planetdecred/dcrios)**
 
-- notify of [cfilters](https://github.com/planetdecred/dcrios/pull/728) fetching progress
+- notifications for [cfilters](https://github.com/planetdecred/dcrios/pull/728) fetching progress
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
 - app [Settings](https://github.com/planetdecred/godcr/pull/305) and [Wallet settings](https://github.com/planetdecred/godcr/pull/298) pages
 - new UI for [Sign message](https://github.com/planetdecred/godcr/pull/288) and [Verify message](https://github.com/planetdecred/godcr/pull/286) pages
 - UI for [Privacy](https://github.com/planetdecred/godcr/pull/293) page
-- CSPP [Setup](https://github.com/planetdecred/godcr/pull/303) UI and logic
+- CSPP mixing [Setup](https://github.com/planetdecred/godcr/pull/303) UI and logic
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
@@ -154,19 +152,19 @@ To enable the above features, mixing and Politeia support were added to the [dcr
 
 **[docs](https://github.com/decred/dcrdocs)**
 
-- render all mathematical values and formula with plain HTML/CSS, remove the need to run client-side JavaScript to render them, and remove MathJax _(thanks @jholdstock &lt;3)_
-- partial update for [v1.6](https://github.com/decred/dcrdocs/pull/1142) release (Privacy and LN to come next)
+- remove the need to run client-side JavaScript to render mathematical values and formulas, render them with plain HTML and CSS, and [remove](https://github.com/decred/dcrdocs/pull/1144) 9 MB of MathJax stuff _(thanks @jholdstock &lt;3)_
+- partial update for [v1.6](https://github.com/decred/dcrdocs/pull/1142) release (Privacy and LN coming next)
 
 **[decred.org](https://github.com/decred/dcrweb)**
 
-- a [new page](https://github.com/decred/dcrweb/pull/941) dedicated to v1.6 [release](https://decred.org/release/) with subtle interactivity
+- added a new sleek [page](https://github.com/decred/dcrweb/pull/941) dedicated to v1.6 [release](https://decred.org/release/)
 - content updates
 
 Other:
 
 - [dcrseeder](https://github.com/decred/dcrseeder) received fixes for [peer](https://github.com/decred/dcrseeder/pull/43) tracking and graceful [shutdown](https://github.com/decred/dcrseeder/pull/41)
-- [release](https://github.com/decred/release) tool was updated to v1.6 and multiple developers have reproduced release builds with it
-- Bug Bounty program has processed a total of 150 submissions and 14 were eligible for a payout, as of [Jan 16](https://bounty.decred.org/2021/01/status-update/)
+- [release](https://github.com/decred/release) tool was updated to v1.6 and used by multiple developers to reproduced release builds
+- Bug Bounty program [reported](https://bounty.decred.org/2021/01/status-update/) that it has processed a total of 150 submissions and 14 were eligible for a payout
 
 ## People
 
