Dev godcr tweaks

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -135,10 +135,11 @@ To enable the above features, mixing and Politeia support were added to the [dcr
 
 **[godcr](https://github.com/planetdecred/godcr)**
 
-- app [Settings](https://github.com/planetdecred/godcr/pull/305) and [Wallet settings](https://github.com/planetdecred/godcr/pull/298) pages
+- implemented [UI](https://github.com/planetdecred/godcr/pull/293) and [setup](https://github.com/planetdecred/godcr/pull/303) for CSPP coin mixing
+- added app [Settings](https://github.com/planetdecred/godcr/pull/305) and [Wallet settings](https://github.com/planetdecred/godcr/pull/298) pages
 - new UI for [Sign message](https://github.com/planetdecred/godcr/pull/288) and [Verify message](https://github.com/planetdecred/godcr/pull/286) pages
-- UI for [Privacy](https://github.com/planetdecred/godcr/pull/293) page
-- CSPP mixing [Setup](https://github.com/planetdecred/godcr/pull/303) UI and logic
+- updated headers on pages for a better UX
+- API for overlaying widgets was added to Gio and has been used to achieve the intended UI design and behavior on the Wallets page
 
 **[dcrdata](https://github.com/decred/dcrdata)**
 
