--- a/journal/202101.md
+++ b/journal/202101.md
@@ -204,13 +204,18 @@ Some irregular changes among the tracked [stats](https://github.com/decredcommun
 
 ## Governance
 
-In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received {n} DCR and spent {n} DCR. Using January's daily average DCR/USD rate of ${n.dd}, this is ${n}K received and ${n}K spent. At December's average daily rate of ${n.dd}, the USD figure billed for past work is ${n}K. As of {date}, Treasury balance is {n} DCR ({n.d} million USD at ${n.dd}).
+In January the [Treasury](https://explorer.dcrdata.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) received 11,878 DCR and spent 6,750 DCR. Using January's daily average DCR/USD rate of $54.25, this is $644K received and $366K spent. At December's average daily rate of $31.07, the USD figure billed for past work is $210K. As of Feb 4, Treasury balance is 645,642 DCR (51.6 million USD at $80.00).
 
-{ high level recap of decision-making activity and most important events }
+Four proposals were submitted in January, with {insert latest status at publication}. 
 
-- {}
+- DCRDEX Phase 2 development [proposal](https://proposals.decred.org/proposals/d462ac3) set new records in terms of support from the ticket pool, with 53% of the eligible tickets turning out to vote almost unanimously yes (98.2%)! This proposal approved a budget of $245,000 to develop a set of features including support for SPV wallets, ETH/ERC-20 token trading, Bitcoin forks and Decrediton integration.
+- Decred in Depth is going to be under new management, and doing it live, after a [proposal](https://proposals.decred.org/proposals/391108e) from @elima_iii was approved with 86.3% approval and 28% turnout - this covers 24-36 episodes at $500/episode.
+- A new research proposal from @ammarooni requests $17,500 to write and publish a book, [Decentralized Credits: The Digitization of Money and State](https://proposals.decred.org/proposals/9e1d644).
+- The Decred Arabia team [requested](https://proposals.decred.org/proposals/d0c32d5) $6,200 for six months' funding. 
 
-Politeia Digest [issue {}]({}) and [issue {}]({}) have more details on the month's proposals.
+A further two proposals were submitted in early February, for [Decred Journal 2021](https://proposals.decred.org/proposals/1d74b88) (max budget $39,000) and [Open Source Research 2021](https://proposals.decred.org/proposals/020b8b0) (max budget $40,000). The Decred Journal proposal offers an opportunity to leave more formal and immutable feedback than usual, and you can also (if you've got tickets) vote to continue funding the Journal!
+
+Politeia Digest returned with a catch-up [issue 40](https://blockcommons.red/politeia-digest/issue040/) which also covered December proposals.
 
 ## Network
 
@@ -280,6 +285,8 @@ Upcoming:
 Selected articles:
 
 - {}
+- https://blockcommons.red/post/dcr-on-chain-2/
+- https://blockcommons.red/post/ppcc-changelog-2020/
 
 Videos:
 
