--- a/journal/202101.md
+++ b/journal/202101.md
@@ -225,7 +225,7 @@ Politeia Digest returned with a catch-up [issue 40](https://blockcommons.red/pol
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: January's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kjc6iems-kkn6rfe4&scale=linear&bin=block&axis=time) opened at ~348 Ph/s and closed ~406 Ph/s, bottoming at 282.8 Ph/s and peaking at 544.5 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of {date}: {pool name n%, ...}.
+Hashrate: January's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kjc6iems-kkn6rfe4&scale=linear&bin=block&axis=time) opened at ~348 Ph/s and closed ~406 Ph/s, bottoming at 282.8 Ph/s and peaking at 544.5 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Feb 1: UUPool 33.2%, Poolin 28.7%, Antpool 18.2%, easy2mine 9.4%, F2Pool 5.2%,BTC.com 2.08%, Huobipool 1.89%, Luxor 1.13%, CoinMine 0.036%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
