--- a/journal/202101.md
+++ b/journal/202101.md
@@ -231,13 +231,15 @@ Hashrate: January's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrat
 
 Staking: [30-day average](https://dcrstats.com/) ticket price was 173.23 DCR (+9.33). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kjc4h4yd-kkn4o887&scale=linear&bin=window&axis=time&visibility=true-false) varied between 149.9-212.28 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kjc6mqhk-kkn6yv2e&scale=linear&bin=block&axis=time&visibility=true-false) was 6.54-7.12 million DCR, which corresponded to 52.52-56.64% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kjc6rs1v-kkn73zz0&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
 
+We once again had record high numbers this month both in terms of ticket price 212.28 DCR and also stake participation 56.64%
+
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
 { recap of ticket price action if it was interesting }
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [January](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1609459200000&to=1612137600000) there was an average of {} public listening nodes and {} total nodes per dcr.farm. Version distribution: {vx.y.z: n% (+n%), ...}.
+Nodes: Throughout [January](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1609455600000&to=1612134000000) there was an average of 116 public listening nodes and 235 total nodes per dcr.farm. Average version distribution for January: 24% dcrd v1.6 dev and RC builds, 22% dcrd v1.5.2, 13% dcrd v1.5.1, 4% dcrd v1.7 dev builds, 3.6% dcrd v1.5.0, 2.3% dcrd v1.5 dev and RC builds, 0.4% dcrd v1.4, 10% dcrwallet v1.5.1, 1% dcrwallet v1.5, 0.6% dcrwallet v1.4, 0.6% dcrwallet v1.6 dev and RC builds, 19% others.
 
 { maybe mention LN status https://ln-map.jamieholdstock.com/ }
 
