--- a/journal/202101.md
+++ b/journal/202101.md
@@ -97,6 +97,11 @@ CMS:
 
 - various improvements for config handling, errors, and HTTP redirects
 
+In progress:
+
+- support for [reverse proxy](https://github.com/decred/dcrpool/pull/301) deployments
+- NiceHash support
+
 **[dcrlnd](https://github.com/decred/dcrlnd)**
 
 - shutdown fixes and dependency updates
@@ -366,6 +371,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: {}
-- reviews and feedback: {}
+- reviews and feedback: dnldd
 - title image: {}
 - funding: Decred Treasury
