Dev review davecgh

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -371,6 +371,6 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 Credits (alphabetical order):
 
 - writing and editing: {}
-- reviews and feedback: dnldd
+- reviews and feedback: davecgh, dnldd
 - title image: {}
 - funding: Decred Treasury
