--- a/journal/202101.md
+++ b/journal/202101.md
@@ -370,7 +370,7 @@ You can submit a story [here](https://github.com/xaur/decred-news/labels/next%20
 
 Credits (alphabetical order):
 
-- writing and editing: {}
-- reviews and feedback: davecgh, dnldd
+- writing and editing: bee, degeri, richardred
+- reviews and feedback: davecgh, dnldd, oshorefueled
 - title image: {}
 - funding: Decred Treasury
