People clean up

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -8,6 +8,7 @@ _Image: {"$title by $author. $optional-description" for artwork, "$description" 
 
 - v1.6 release
 - a batch of outreach and research proposals are up for discussion
+- Decred 5 years soon
 
 ## v1.6 Release
 
@@ -178,18 +179,7 @@ Other:
 
 ## People
 
-{ hint: list people who made their first non-trivial commits merged in master branches, in alphabetical order }
-
-Welcome to new first time contributors with code merged to master: @lolandhold ([dcrd](https://github.com/decred/dcrd/commits?author=lolandhold)), @brunaazambuja ([pi-ui](https://github.com/decred/pi-ui/commits?author=brunaazambuja)), @hamurabiaraujo ([pi-ui](https://github.com/decred/pi-ui/commits?author=hamurabiaraujo))
-
-
-Congratulations to new contractors granted the Decred Contractor Clearance (DCC): [{@handle}]({link to most relevant account}). { hint: check the CMS }
-
-{ welcome new corporate contractors with short intros, if any }
-
-{ updates from existing contractors }
-UUPool 33.2%, Poolin 28.7%, Antpool 18.2%, easy2mine 9.4%, F2Pool 5.2%,BTC.com 2.08%, Huobipool 1.89%, Luxor 1.13%, CoinMine 0.036%.
-{ interviews about people }
+Welcome to new first time contributors with code merged to master: @lolandhold ([dcrd](https://github.com/decred/dcrd/commits?author=lolandhold)), @brunaazambuja ([pi-ui](https://github.com/decred/pi-ui/commits?author=brunaazambuja)), @hamurabiaraujo ([pi-ui](https://github.com/decred/pi-ui/commits?author=hamurabiaraujo))!
 
 Community stats as of Feb 1:
 
