--- a/journal/202101.md
+++ b/journal/202101.md
@@ -227,13 +227,13 @@ Politeia Digest returned with a catch-up [issue 40](https://blockcommons.red/pol
 - check dcrdata.org (preferred), dcrstats.com and charts.dcr.farm to get the numbers
 - use the same `zoom` parameter for all dcrdata links }
 
-Hashrate: January's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kjc6iems-kkn6rfe4&scale=linear&bin=block&axis=time) opened at ~348 Ph/s and closed ~406 Ph/s, bottoming at 282.8 Ph/s and peaking at 544.5 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Feb 1: UUPool 33.2%, Poolin 28.7%, Antpool 18.2%, easy2mine 9.4%, F2Pool 5.2%,BTC.com 2.08%, Huobipool 1.89%, Luxor 1.13%, CoinMine 0.036%.
+Hashrate: January's [hashrate](https://explorer.dcrdata.org/charts?chart=hashrate&zoom=kjc6iems-kkn6rfe4&scale=linear&bin=block&axis=time) opened at ~348 Ph/s and closed ~406 Ph/s, bottoming at 283 Ph/s and peaking at 545 Ph/s throughout the month. Pool hashrate [distribution](https://miningpoolstats.stream/decred) as of Feb 1: UUPool 33%, Poolin 29%, Antpool 18%, easy2mine 9.4%, F2Pool 5.2%, BTC.com 2%, Huobipool 1.9%, Luxor 1.1%, CoinMine 0.04%.
 
 { hint: fallback link for pool distribution: https://dcrstats.com/pow }
 
-Staking: [30-day average](https://dcrstats.com/) ticket price was 173.23 DCR (+9.33). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kjc4h4yd-kkn4o887&scale=linear&bin=window&axis=time&visibility=true-false) varied between 149.9-212.28 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kjc6mqhk-kkn6yv2e&scale=linear&bin=block&axis=time&visibility=true-false) was 6.54-7.12 million DCR, which corresponded to 52.52-56.64% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kjc6rs1v-kkn73zz0&scale=linear&bin=block&axis=time&visibility=true-false) in PoS.
+Staking: [30-day average](https://dcrstats.com/) ticket price was 173.23 DCR (+9.3). The [price](https://explorer.dcrdata.org/charts?chart=ticket-price&zoom=kjc6iems-kkn6rfe4&axis=time&visibility=true-true&mode=stepped) varied between 149.9-212.3 DCR. [Locked amount](https://explorer.dcrdata.org/charts?chart=ticket-pool-value&zoom=kjc6iems-kkn6rfe4&scale=linear&bin=block&axis=time) was 6.55-7.12 million DCR, which corresponded to 52.53-56.71% of the available supply [participating](https://explorer.dcrdata.org/charts?chart=stake-participation&zoom=kjc6iems-kkn6rfe4&scale=linear&bin=block&axis=time) in PoS.
 
-We once again had record high numbers this month both in terms of ticket price 212.28 DCR and also stake participation 56.64%
+We once again had record high numbers this month both in terms of ticket price 212.28 DCR and also stake participation 56.71%!
 
 { hint: fallback link for locked %: https://charts.dcr.farm/d/000000003/proof-of-stake?orgId=1&from=now-40d&to=now }
 
@@ -241,7 +241,7 @@ We once again had record high numbers this month both in terms of ticket price 2
 
 { hint: for dcr.farm set the zoom to show exactly UTC month 1st 00:00:00 - next month 1st 00:00:00 }
 
-Nodes: Throughout [January](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1609455600000&to=1612134000000) there was an average of 116 public listening nodes and 235 total nodes per dcr.farm. Average version distribution for January: 24% dcrd v1.6 dev and RC builds, 22% dcrd v1.5.2, 13% dcrd v1.5.1, 4% dcrd v1.7 dev builds, 3.6% dcrd v1.5.0, 2.3% dcrd v1.5 dev and RC builds, 0.4% dcrd v1.4, 10% dcrwallet v1.5.1, 1% dcrwallet v1.5, 0.6% dcrwallet v1.4, 0.6% dcrwallet v1.6 dev and RC builds, 19% others.
+Nodes: Throughout [January](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1609459200000&to=1612137600000) there was an average of 116 public listening nodes and 235 total nodes according to dcr.farm. Average version distribution for January: 22% dcrd v1.5.2, 14% dcrd v1.6.0, 13% dcrd v1.6 dev and RC builds, 13% dcrd v1.5.1, 4% dcrd v1.7 dev builds, 3.6% dcrd v1.5.0, 2.3% dcrd v1.5 dev and RC builds, 0.4% dcrd v1.4, 10% dcrwallet v1.5.1, 7% dcrwallet v1.6.0, 1% dcrwallet v1.6 dev and RC builds, 1% dcrwallet v1.5, 0.6% dcrwallet v1.4, 8% others.
 
 { maybe mention LN status https://ln-map.jamieholdstock.com/ }
 
