Network LN stats

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -230,7 +230,7 @@ We once again had record high numbers this month both in terms of ticket price 2
 
 Nodes: Throughout [January](https://charts.dcr.farm/d/000000014/nodes?orgId=1&from=1609459200000&to=1612137600000) there was an average of 116 public listening nodes and 235 total nodes according to dcr.farm. Average version distribution for January: 22% dcrd v1.5.2, 14% dcrd v1.6.0, 13% dcrd v1.6 dev and RC builds, 13% dcrd v1.5.1, 4% dcrd v1.7 dev builds, 3.6% dcrd v1.5.0, 2.3% dcrd v1.5 dev and RC builds, 0.4% dcrd v1.4, 10% dcrwallet v1.5.1, 7% dcrwallet v1.6.0, 1% dcrwallet v1.6 dev and RC builds, 1% dcrwallet v1.5, 0.6% dcrwallet v1.4, 8% others.
 
-{ maybe mention LN status https://ln-map.jamieholdstock.com/ }
+Decred's Lightning Network had 28 nodes (+4), 47 channels (+5) with a total capacity of 8.3 DCR (-0.4), as of Feb 1. @jholdstock's network map has moved to a new domain: [ln-map.jholdstock.uk](https://ln-map.jholdstock.uk/). LN capacity is becoming more important as more LN features are exposed to end users via Decrediton GUI. Thank you to all LN operators for [running the nodes](https://docs.decred.org/lightning-network/overview/)!
 
 { any interesting analysis or events in the network }
 
