--- a/journal/202101.md
+++ b/journal/202101.md
@@ -240,7 +240,13 @@ Decred's Lightning Network had 28 nodes (+4), 47 channels (+5) with a total capa
 
 { check https://github.com/decred/dcrwebapi/commits/master for changes to the VSP list }
 
-dcr.farm added support for vspd on a new subdomain [vsp.dcr.farm](https://vsp.dcr.farm/)
+dcr.farm added support for vspd on a new subdomain [vsp.dcr.farm](https://vsp.dcr.farm/). In early Feb [decredvoting.com](https://decredvoting.com/) and [dcrpool.ibitlin.com](https://dcrpool.ibitlin.com/) also upgraded to support vspd. The latter offers a bonus [Telegram bot](https://t.me/DcrTicketNotificationBot) to watch tickets.
+
+Unresponsive VSPs [decred.everstake.one](https://decred.everstake.one) and [dcrpos.megapool.info](https://dcrpos.megapool.info) were removed from the listing.
+
+As of writing 10 out of 17 VSPs have upgraded to [vspd](https://github.com/decred/vspd). VSP operators please be aware that users of Decrediton v1.6 will see the list of new vspd instances as a recommended option, which means VSPs that upgrade sooner may steal some users from the slower ones!
+
+Binance had DCR deposits and withdrawals disabled for [30+ hours](https://twitter.com/behindtext/status/1354389277870845959) rougly 12 hours after v1.6 was released.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
