Integ add Monnos and First Kudi

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -246,6 +246,10 @@ Unresponsive VSPs [decred.everstake.one](https://decred.everstake.one) and [dcrp
 
 As of writing 10 out of 17 VSPs have upgraded to [vspd](https://github.com/decred/vspd). VSP operators please be aware that users of Decrediton v1.6 will see the list of new vspd instances as a recommended option, which means VSPs that upgrade sooner may steal some users from the slower ones!
 
+Brazilian [Monnos](https://monnos.com/) announced the [addition](https://twitter.com/MonnosGlobal/status/1351212798739669004) of DCR to their portfolio. The platform allows to trade crypto for BRL fiat, copy strategies of other traders ("social trading") and plans to issue crypto payment cards. As of writing DCR deposits are [not available](https://monnos.com/en/fees-and-limits/) but buying, trading and withdrawing might work.
+
+Nigerian [First Kudi](https://firstkudi.com/) [announced](https://twitter.com/firstkudiapp/status/1353729854697582598) that DCR was added to their new [First Kudi Pro](https://first-kudi.medium.com/introducing-first-kudi-pro-2b8d30f85d08) platform that allows trading crypto to NGN fiat and USDT/GUSD stablecoins.
+
 Binance had DCR deposits and withdrawals disabled for [30+ hours](https://twitter.com/behindtext/status/1354389277870845959) rougly 12 hours after v1.6 was released.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
