--- a/journal/202101.md
+++ b/journal/202101.md
@@ -278,13 +278,7 @@ News coverage secured by Monde PR:
 
 Attended:
 
-- {dates} - [{title}]({event link}) - {city}, {country}. {recap}
-
-Upcoming:
-
-- {dates} - [{title}]({event link}) - {city}, {country}. {info}
-
-{announcements in Events domain}
+- Jan 22 - [Gate.io AMA](https://twitter.com/Decred_ES/status/1351974812659437569) - Internet. @elian answered questions about Decred from Gate.io Spanish community in their [Telegram](http://t.me/Gateio_Espanol) channel.
 
 ## Media
 
