--- a/journal/202101.md
+++ b/journal/202101.md
@@ -126,7 +126,9 @@ Merged work:
 
 A total of 32 PRs from 7 contributors were [merged](https://github.com/decred/dcrdex/pulls?q=is%3Apr+merged%3A2021-01-01..2021-01-31+sort%3Aupdated-asc), adding 3K and deleting 1K lines of code.
 
-Check the [second](https://proposals.decred.org/proposals/d462ac3) proposal for a big picture plan of what's coming in the next 9 months. And congratulations to DCRDEX team with the stunning 98% Yes votes!
+Check the [second](https://proposals.decred.org/proposals/d462ac3) proposal for a big picture plan of what's coming in the next 9 months. In addition, [this tweet](https://twitter.com/behindtext/status/1355478387721187328) hinted at a possible integration of privacy on the DCR side of trading.
+
+Congratulations to DCRDEX team with the stunning 98% Yes votes!
 
 **[dcrandroid](https://github.com/planetdecred/dcrandroid)**
 
@@ -282,7 +284,7 @@ Attended:
 
 ## Media
 
-@kyleFirethought and EETER made LottieFiles' [Top Contributor](https://twitter.com/firethought/status/1346855997281882112) for uploading [203 animations](https://lottiefiles.com/decred) in 2020. [Lottie](https://lottiefiles.com/what-is-lottie) is an animation system used by Decred designers.
+@kyleFirethought and EETER made Decred LottieFiles' [Top Contributor](https://twitter.com/firethought/status/1346855997281882112) for uploading [203 animations](https://lottiefiles.com/decred) in 2020. [Lottie](https://lottiefiles.com/what-is-lottie) is an animation system used by Decred designers.
 
 Selected articles:
 
@@ -292,7 +294,8 @@ Selected articles:
 
 Videos:
 
-- {}
+- https://www.youtube.com/watch?v=hRvGHhGx-Fg
+- https://www.youtube.com/watch?v=uqhaz55dFRQ
 
 Audio:
 
@@ -300,7 +303,7 @@ Audio:
 
 Art/Fun:
 
-- {}
+- https://twitter.com/decredproject/status/1353780294013353986
 
 Translations:
 
@@ -326,11 +329,18 @@ Selected Twitter discussions:
 
 - {}
 
+> People who love DCR, really love it :) DCRDEX a big fundamental and market structure catalyst, after brutal bear. Layer in DCR privacy and it’s now one of the most sovereign venues to swap coin.
+> 
+> Now people just stacking tickets, and stacking sats, via DCR. ([@cburniske](https://twitter.com/cburniske/status/1355406801731108866))
+
 ## Markets
 
 In January DCR was trading between USD 39.80-69 / BTC 0.0013-0.0020. The average daily rate was $54.25.
 
 { markets overview: USD and BTC prices, highs and lows, interesting events, interesting analysis }
+
+- https://ournetwork.substack.com/p/our-network-issue-56 { BTC break even levels and more }
+  - https://twitter.com/_Checkmatey_/status/1355296688026447873
 
 { dcrdex updates, esp. volume }
 
