Markets DEX vol

--- a/journal/202101.md
+++ b/journal/202101.md
@@ -350,7 +350,7 @@ In January DCR was trading between USD 39.80-69 / BTC 0.0013-0.0020. The average
 - https://ournetwork.substack.com/p/our-network-issue-56 { BTC break even levels and more }
   - https://twitter.com/_Checkmatey_/status/1355296688026447873
 
-{ dcrdex updates, esp. volume }
+[DCRDEX](https://dex.decred.org/) has traded a total of 1.3M DCR and 1.9K BTC over almost 4 months since launch. On average that is roughly 12K DCR / 17 BTC per 24 hours.
 
 ## Relevant External
 
